--- a/rush.yaml
+++ b/rush.yaml
@@ -136828,7 +136828,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 2 or higher LIGHT or DARK Attribute monster with 0 DEF from your Graveyard to your hand.
+    Add 1 Level 2 or higher LIGHT Attribute or DARK Attribute monster with 0 DEF from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -136890,7 +136890,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, you can Special Summon 1 Level 7 or higher Cyberse Type monster from among the cards sent face-up to your field. If you Special Summoned "Space Yggdrago" by this effect, you can draw 1 card.
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can Special Summon 1 Level 7 or higher Cyberse Type monster from among the cards sent face-up to your field. If it was "Space Yggdrago", you can draw 1 card.
   de:
   es:
   fr:
@@ -136948,7 +136948,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon a LIGHT or DARK Attribute Cyberse Type monster by sending only monsters from your hand, or only face-up monsters from your field, to the Graveyard as material. Then, if you sent to the Graveyard a monster whose original name is "Space Yggdrago" by this effect, you can destroy 1 card on your opponent's field.
+    Fusion Summon a LIGHT Attribute or DARK Attribute Cyberse Type monster by sending only monsters from your hand, or only face-up monsters from your field, to the Graveyard as material. Then, if you sent to the Graveyard a monster whose original name is "Space Yggdrago" by this effect, you can destroy 1 card on your opponent's field.
   de:
   es:
   fr:
@@ -137006,7 +137006,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 3-6 Cyberse Type monsters, "Fusion", and/or "Deep Warning Fusion" from your Graveyard on top of your Deck in any order. Then, if you have a face-up Fusion Monster on your field, you can destroy 1 monster on your opponent's field.
+    Place 3 to 6 Cyberse Type monsters/"Fusion"/"Deep Warning Fusion" from your Graveyard on top of your Deck in any order. Then, if you have a face-up Fusion Monster on your field, you can destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
@@ -137064,7 +137064,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 2 Cyberse Type Maximum Monsters, and/or DARK Attribute Fiend Type monsters with 0 ATK and 2400 or more DEF, from your Graveyard to your hand.
+    Add up to 2 Cyberse Type Maximum Monsters and/or DARK Attribute Fiend Type monsters with 0 ATK/2400 or more DEF from your Graveyard to your hand.
   de:
   es:
   fr:
