--- a/data/cards/44223284.yaml
+++ b/data/cards/44223284.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードは１ターンに１度だけ、対象を指定しないカードの効果では破壊されない。
   ko: |-
-    이 카드는 1턴에 1번만, 대상을 지정하지 않은 카드의 효과로는 파괴되지 않는다.
+    이 카드는 1턴에 1번만, 대상을 지정하지 않는 카드의 효과로는 파괴되지 않는다.
   zh-TW: |-
     此卡僅限於１回合１次，不會因不以此卡為對象的效果被破壞。
   zh-CN: |-
