--- a/data/cards/81434470.yaml
+++ b/data/cards/81434470.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードは通常召喚できない。自分フィールド上に存在する「オーシャンズ・オーパー」１体をリリースした場合のみ特殊召喚する事ができる。このカードが自分フィールド上に表側表示で存在する限り、相手は手札を公開し続けなければならない。
   ko: |-
-    이 카드는 일반 소환/세트할 수 없다. 자신 필드 위에 존재하는 "오션즈 오퍼" 1장을 제물로 바친 경우에만 특수 소환할 수 있다. 이 카드가 자신 필드 위에 앞면 표시로 존재하는 한, 상대는 패를 계속해서 공개해야 한다.
+    이 카드는 일반 소환 / 세트할 수 없다. 자신 필드 위에 존재하는 "오션즈 오퍼" 1장을 릴리스한 경우에만 특수 소환할 수 있다. 이 카드가 자신 필드 위에 앞면 표시로 존재하는 한, 상대는 패를 계속해서 공개해야 한다.
   zh-TW: |-
     此卡無法通常召喚。僅限在解放我方場上１隻「海洋看守者」的狀況下特殊召喚。只要此卡以正面表示存在於場上，對方就必須持續公開手牌。
   zh-CN: |-
