--- a/data/cards/91250514.yaml
+++ b/data/cards/91250514.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     アドバンス召喚したこのカードがフィールド上から墓地へ送られた時、自分のデッキからカードを２枚ドローする。この効果を発動した場合、このカードをゲームから除外する。
   ko: |-
-    제물 소환된 이 카드가 필드 위에서 묘지로 보내졌을 때, 자신의 덱에서 카드를 2장 드로우한다. 이 효과를 사용했을 경우, 이 카드를 게임에서 제외한다.
+    어드밴스 소환한 이 카드가 필드 위에서 묘지로 보내졌을 때, 자신의 덱에서 카드를 2장 드로우한다. 이 효과를 발동했을 경우, 이 카드를 게임에서 제외한다.
   zh-TW: |-
     升級召喚的此卡從場上被送至墓地時，從我方牌組抽２張牌。在發動此效果的狀況下，將此卡從遊戲除外。
   zh-CN: |-
