--- a/data/cards/06614221.yaml
+++ b/data/cards/06614221.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードを召喚する場合、生け贄１体または生け贄なしで召喚する事ができる。このカードの攻撃力は、生け贄召喚時に生け贄に捧げたモンスターの元々の攻撃力を合計した数値になる。このカードがフィールド上に表側表示で存在する限り、いかなる場合による生け贄も行う事ができなくなる。
   ko: |-
-    이 카드를 일반 소환할 경우, 제물 1장 또는 제물 없이 소환할 수 있다. 이 카드의 공격력은 제물 소환시에 제물로 바친 몬스터의 원래 공격력을 합한 수치가 된다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 어떤 경우에 의해서도 제물을 실행할 수 없게 된다.
+    이 카드를 일반 소환할 경우, 릴리스 1장 또는 릴리스 없이 소환할 수 있다. 이 카드의 공격력은 어드밴스 소환시에 릴리스한 몬스터의 원래 공격력을 합한 수치가 된다. 이 카드가 필드위에 앞면 표시로 존재하는 한, 어떤 경우에 의한 릴리스도 실행할 수 없게 된다.
   zh-TW: |-
     在召喚此卡的狀況下，可解放１隻或不需解放召喚。此卡的攻擊力變為升級召喚時解放的怪獸的原本攻擊力合計的數值。只要此卡以正面表示存在於場上，雙方就無法進行解放。
   zh-CN: |-
