--- a/data/cards/17706537.yaml
+++ b/data/cards/17706537.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードが戦闘によって相手モンスターを破壊し墓地へ送った時、相手ライフに４００ポイントダメージを与える。
   ko: |-
-    이 카드가 전투에 의해서 상대 몬스터를 파괴하고 묘지로 보낼 때마다, 상대 라이프에 400 포인트 데미지를 준다.
+    이 카드가 전투에 의해서 상대 몬스터를 파괴하고 묘지로 보냈을 때, 상대 라이프에 400 포인트 데미지를 준다.
   zh-TW: |-
     此卡因戰鬥破壞對方怪獸送至墓地時，給予對方LP４００傷害。
   zh-CN: |-
