--- a/data/cards/19041767.yaml
+++ b/data/cards/19041767.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     相手のエンドフェイズ時に１度だけ５００ライフポイントを払って発動する事ができる。手札または自分フィールド上に表側表示で存在するデュアルモンスター１体を通常召喚する。また、このカードは１ターンに１度だけ、戦闘では破壊されない。
   ko: |-
-    500 라이프 포인트를 지불하는 것으로, 패 또는 자신 필드 위에 앞면 표시로 존재하는 듀얼 몬스터 1장을 일반 소환/세트한다. 이 효과는 1턴에 1번만, 상대 턴의 엔드 페이즈시에 발동할 수 있다. 이 카드는 1턴에 1번만, 전투에 의해서는 파괴되지 않는다(데미지 계산은 적용한다).
+    상대의 엔드 페이즈시에 1번만 500 라이프 포인트를 지불하고 발동할 수 있다. 패 또는 자신 필드 위에 앞면 표시로 존재하는 듀얼 몬스터 1장을 일반 소환 / 세트한다. 또한, 이 카드는 1턴에 1번만, 전투로는 파괴되지 않는다.
   zh-TW: |-
     可在對方結束階段進行１次，支付５００LP發動。通常召喚１隻二重怪獸。此外，僅限１回合１次，此卡不會因戰鬥被破壞。
   zh-CN: |-
