--- a/data/cards/27408609.yaml
+++ b/data/cards/27408609.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードの攻撃力・守備力は、ゲームから除外されている自分のカードの数×３００ポイントアップする。
   ko: |-
-    이 카드의 공격력과 수비력은 게임에서 제외되어 있는 자신의 카드의 수 × 300 포인트 올린다.
+    이 카드의 공격력과 수비력은,게임에서 제외되어 있는 자신의 카드 수 × 300 포인트 올린다.
   zh-TW: |-
     此卡的攻擊力・守備力依據我方從遊戲被除外的卡數量×３００進行提升。
   zh-CN: |-
