--- a/data/cards/28297833.yaml
+++ b/data/cards/28297833.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが召喚に成功した場合に発動する。除外されているお互いのカードを全て持ち主のデッキに戻す。このカードの攻撃力は、この効果でデッキに戻った数×１００アップする。②：このカードが除外された場合に発動する。お互いのプレイヤーは、それぞれ自身のデッキの上からカードを５枚除外する。
   ko: |-
-    이 카드가 소환에 성공했을 때, 게임에서 제외되어 있는 카드를 전부 덱으로 되돌리고 셔플한다. 이 카드의 공격력은 이 효과로 덱으로 되돌린 카드의 매수 × 100 포인트 올린다. 이 카드가 게임에서 제외되었을 때, 양쪽 플레이어는 덱 위에서 카드를 5장 게임에서 제외한다.
+    이 카드가 일반 소환에 성공했을 때, 게임에서 제외되어 있는 카드를 전부 덱으로 돌리고 셔플한다. 이 카드의 공격력은 이 효과로 덱으로 되돌린 카드의 매수 × 100 포인트 올린다. 이 카드가 게임에서 제외되었을 때, 양쪽 플레이어는 덱 위에서 카드를 5장 게임에서 제외한다.
   zh-TW: |-
     ①：在此卡召喚成功的狀況下發動。將雙方被除外的所有卡全部送回持有者的牌組。此卡的攻擊力依據透過此效果送回牌組的數量×１００進行提升。②：在此卡被除外的狀況下發動。雙方玩家各從自身牌組上方將５張卡除外。
   zh-CN: |-
