--- a/data/cards/33695750.yaml
+++ b/data/cards/33695750.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードが召喚・特殊召喚に成功した時、このカードにカウンターを２つ置く。この効果によってカードに乗ったカウンター１つにつき、このカードの攻撃力は５００ポイントアップする。このカードが戦闘によって破壊される場合、代わりにこのカードのカウンターを１つ取り除く。
   ko: |-
-    이 카드가 일반 소환/특수 소환에 성공했을 때, 이 카드에 카운터를 2개 놓는다. 이 효과에 의해서 카드에 얹힌 카운터 1개당, 이 카드의 공격력은 500 포인트 올린다. 이 카드가 전투에 의해서 파괴될 경우, 대신에 이 카드의 카운터를 1개 제거한다.
+    이 카드가 일반 소환 / 특수 소환에 성공했을 때, 이 카드에 카운터를 2개 놓는다. 이 효과에 의해서 카드에 얹은 카운터 1개당, 이 카드의 공격력은 500 포인트 올린다. 이 카드가 전투에 의해서 파괴될 경우, 대신에 이 카드의 카운터를 1개 제거한다.
   zh-TW: |-
     此卡召喚・特殊召喚成功時，在此卡放置２個計數物。此卡的攻擊力依據此卡的計數物數量×５００進行提升。在此卡因戰鬥被破壞的狀況下，去除此卡的１個計數物作為替代。
   zh-CN: |-
