--- a/data/cards/35984222.yaml
+++ b/data/cards/35984222.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードがカードの効果によって破壊され墓地へ送られた場合、次のターンのスタンバイフェイズ時にこのカードを墓地から特殊召喚し、このカード以外の自分フィールド上に存在するモンスターを全て破壊する。このカードがフィールド上に表側表示で存在する限り、自分はモンスターを通常召喚・反転召喚・特殊召喚する事ができない。「超魔神イド」は自分フィールド上に１枚しか表側表示で存在できない。
   ko: |-
-    이 카드가 카드의 효과에 의해서 파괴되어 묘지로 보내졌을 경우, 다음 턴의 스텐바이 페이즈시에 이 카드를 묘지에서 특수 소환하고, 이 카드 이외의 자신 필드 위에 존재하는 몬스터를 전부 파괴한다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 자신은 몬스터를 일반 소환/반전 소환/특수 소환할 수 없다. "초마신 이도"는 자신 필드 위에 1장밖에 앞면 표시로 존재할 수 없다.
+    이 카드가 카드의 효과에 의해서 파괴되어 묘지로 보내졌을 경우, 다음 턴의 스텐바이 페이즈시에 이 카드를 묘지에서 특수 소환하고, 이 카드 이외의 자신 필드 위에 존재하는 몬스터를 전부 파괴한다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 자신은 몬스터를 일반 소환 / 세트 / 반전 소환 / 특수 소환할 수 없다. "초마신 이도"는 자신 필드 위에 1장밖에 앞면 표시로 존재할 수 없다.
   zh-TW: |-
     在此卡因卡的效果被破壞送至墓地的狀況下，在下一個回合的準備階段時發動。從墓地特殊召喚此卡，將此卡以外的我方場上的所有怪獸全部破壞。只要此卡以正面表示存在於場上，我方就無法通常召喚・反轉召喚・特殊召喚怪獸。「超魔神 本我」在我方場上僅限以正面表示存在１張。
   zh-CN: |-
