--- a/data/cards/45298492.yaml
+++ b/data/cards/45298492.yaml
@@ -36,8 +36,7 @@ text:
     チューナー＋チューナー以外のモンスター１体以上
     このカードがフィールド上に表側表示で存在する限り、相手は表側表示で存在する他の戦士族モンスターを攻撃対象に選択する事はできない。また、このカードは１ターンに１度だけ、戦闘では破壊されない。
   ko: |-
-    튜너 ＋ 튜너 이외의 몬스터 1장 이상
-    ①: 이 카드가 몬스터 존에 존재하는 한, 상대는 다른 전사족 몬스터를 공격 대상으로 선택할 수 없다. ②: 이 카드는 1턴에 1번만, 전투로는 파괴되지 않는다.
+    튜너 ＋ 튜너 이외의 몬스터 1장 이상이 카드가 필드 위에 앞면 표시로 존재하는 한, 상대는 앞면 표시로 존재하는 다른 전사족 몬스터를 공격 대상으로 선택할 수 없다. 또한, 이 카드는 1턴에 1번만, 전투로는 파괴되지 않는다.
   zh-TW: |-
     協調＋協調以外的怪獸１隻以上
     只要此卡以正面表示存在於場上，對方就無法將其他戰士族怪獸選為攻擊對象。此外，僅限１回合１次，此卡不會因戰鬥被破壞。
