--- a/data/cards/54040221.yaml
+++ b/data/cards/54040221.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが召喚した場合、自分の墓地の炎族モンスター４体を対象として発動する。そのモンスター４体をデッキに戻す。その後、自分は２枚ドローする。
   ko: |-
-    ①: 이 카드를 일반 소환했을 경우, 자신 묘지의 화염족 몬스터 4장을 대상으로 하고 발동한다. 그 몬스터 4장을 덱으로 되돌린다. 그 후, 자신은 2장 드로우한다.
+    이 카드가 일반 소환에 성공했을 때, 자신의 묘지에 존재하는 화염족 몬스터 4장을선택하고 발동한다.선택한 몬스터를 덱으로 되돌리고, 자신의 덱에서 카드를 2장 드로우한다.
   zh-TW: |-
     此卡召喚成功時，可選擇我方墓地４隻炎族怪獸發動。將選擇的４隻怪獸加入牌組後洗牌。其後，從我方牌組抽２張牌。
   zh-CN: |-
