--- a/data/cards/68722455.yaml
+++ b/data/cards/68722455.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードが召喚に成功した時、自分の手札を任意の枚数墓地に送る事で、その枚数分だけフィールド上のカードを持ち主の手札に戻す。
   ko: |-
-    이 카드가 소환에 성공했을 때, 자신의 패를 임의의 매수만큼 묘지로 보내는 것으로, 그 매수만큼만 필드 위의 카드를 주인의 패로 되돌린다.
+    이 카드가 일반 소환에 성공했을 때, 자신의 패를 임의의 매수만큼 묘지로 보내는 것으로, 그 매수만큼만 필드 위의 카드를 주인의 패로 되돌린다.
   zh-TW: |-
     在此卡召喚成功時，可將任意張數的手牌送至墓地發動。依據該張數選擇場上的卡送回持有者的手牌。
   zh-CN: |-
