--- a/data/cards/71717923.yaml
+++ b/data/cards/71717923.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     自分フィールド上に表側表示で存在する地属性モンスター１体をリリースして発動する。フィールド上に表側表示で存在し、リリースしたモンスターの攻撃力以下の守備力を持つモンスターを全て破壊する。
   ko: |-
-    자신 필드 위에 앞면 표시로 존재하는 땅 속성 몬스터 1장을 제물로 바친다. 제물로 바친 카드의 공격력 이하의 수비력을 가진 앞면 표시로 존재하는 몬스터를 전부 파괴한다.
+    자신 필드 위에 앞면 표시로 존재하는 땅 속성 몬스터 1장을 릴리스하고 발동한다. 필드 위에 앞면 표시로 존재하며, 릴리스한 몬스터의 공격력 이하의 수비력을 가진 몬스터를 전부 파괴한다.
   zh-TW: |-
     可解放我方場上１隻正面表示的地屬性怪獸發動。將守備力低於解放怪獸攻擊力的場上所有怪獸全部破壞。
   zh-CN: |-
