--- a/data/cards/90434926.yaml
+++ b/data/cards/90434926.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     自分のドローフェイズにドローしたカードが闇属性モンスターだった場合、そのカードを相手に見せる事で、そのカードを墓地へ送る。その後、自分のデッキからカードを１枚ドローする事ができる。
   ko: |-
-    드로우 페이즈에 드로우한 카드가 어둠 속성 몬스터였을 경우, 그 카드를 상대에게 보여주는 것으로 그 몬스터를 묘지로 보낸다. 그 경우, 자신은 카드를 1장 더 드로우할 수 있다.
+    자신의 드로우 페이즈에 드로우한 카드가 어둠 속성 몬스터였을 경우, 그 카드를 상대에게 보여주는 것으로, 그 카드를 묘지로 보낸다. 그 후, 자신의 덱에서 카드를 1장 드로우할 수 있다.
   zh-TW: |-
     我方抽牌階段抽卡時，在該卡為闇屬性怪獸的狀況下，可將該卡出示給對方發動。將該卡送至墓地。其後，可從我方牌組抽１張牌。
   zh-CN: |-
