--- a/data/cards/95453143.yaml
+++ b/data/cards/95453143.yaml
@@ -36,8 +36,7 @@ text:
     闇属性チューナー＋チューナー以外の悪魔族モンスター１体以上
     ①：１ターンに１度、自分の墓地からレベル６以下の闇属性の効果モンスター１体を除外して発動できる。このカードはエンドフェイズまで、そのモンスターの元々のカード名・効果と同じカード名・効果を得る。②：このカードが破壊され墓地へ送られた場合に発動する。デッキから「地縛神」モンスター１体を手札に加える。
   ko: |-
-    어둠 속성 튜너 ＋ 튜너 이외의 악마족 몬스터 1장 이상
-    ①: 1턴에 1번, 자신 묘지에서 레벨 6 이하의 어둠 속성의 효과 몬스터 1장을 제외하고 발동할 수 있다. 이 카드는 엔드 페이즈까지, 그 몬스터의 원래의 카드명 / 효과와 같은 카드명 / 효과를 얻는다. ②: 이 카드가 파괴되어 묘지로 보내졌을 경우에 발동한다. 덱에서 "지박신" 몬스터 1장을 패에 넣는다.
+    어둠 속성 튜너 + 튜너 이외의 악마족 몬스터 1장 이상1턴에 1번, 자신의 묘지에 존재하는 레벨 6 이하의 어둠 속성의 효과 몬스터 1장을 게임에서 제외하고 발동할 수 있다. 이 카드는 이 턴의 엔드 페이즈시까지, 이 효과를 발동하기 위해 게임에서 제외한 효과 몬스터와 같은 이름의 카드로 취급하고, 같은 효과를 얻는다. 또한, 이 카드가 파괴되어 묘지로 보내졌을 때, 자신의 덱에서 "지박신"이라는 이름이 붙은 몬스터 1장을 패에 넣는다.
   zh-TW: |-
     闇屬性協調＋協調以外的惡魔族怪獸１隻以上
     ①：１回合１次，可從我方墓地將１隻等級６以下的闇屬性效果怪獸除外發動。在結束階段前，此卡獲得與該怪獸相同的原本的卡名・效果。②：在此卡被破壞送至墓地的狀況下發動。從牌組將１隻「地縛神」怪獸加入手牌。
