--- a/data/rush/16793.yaml
+++ b/data/rush/16793.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An electronic beast that carries information throughout the Network World. After changes through the generations, its breed improved, resulting in a personality that lacks any hint of being two-faced.
+    A digital beast that transports information through the network world. Through generations of modification, it has evolved into a creature with a straightforward and honest nature.
   de:
   es:
   fr:
@@ -46,9 +46,4 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714318
