--- a/data/rush/16985.yaml
+++ b/data/rush/16985.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add all Cyberse Type monsters from your Graveyard to your hand. Then, place this card from your field on the bottom of the owner's Deck.
+    Add all Cyberse Type monsters from your Graveyard to your hand. Then, place this card on the bottom of the owner's Deck.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717408
