--- a/data/rush/17305.yaml
+++ b/data/rush/17305.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your opponent has 1 or less cards in their hand, shuffle 1 Thunder Type monster from your Graveyard into the Deck.
+    If your opponent has 1 card or less in their hand, shuffle 1 Thunder Type monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -60,9 +60,4 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713921
