--- a/data/rush/17306.yaml
+++ b/data/rush/17306.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has 2 or less cards in their hand.
+    Your opponent has 2 cards or less in their hand.
   de:
   es:
   fr:
@@ -60,9 +60,4 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716884
