--- a/data/rush/17671.yaml
+++ b/data/rush/17671.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 4 cards of your Deck to the Graveyard. You can only attack with DARK Attribute Spellcaster Type monsters this turn.
+    Send the top 4 cards of your Deck to the Graveyard. This turn, you can only attack with DARK Attribute Spellcaster Type monsters.
   de:
   es:
   fr:
@@ -66,9 +66,4 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714485
