--- a/data/rush/17945.yaml
+++ b/data/rush/17945.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack while you have a Machine Type or Thunder Type monster in your Graveyard.
+    When an opponent's monster declares an attack while you have a Machine or Thunder Type monster in your Graveyard.
   de:
   es:
   fr:
@@ -56,9 +56,4 @@ sets:
     set_name: Strongest Battle Deck Yuhi - Join and Explode! Join and Intensify!
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717140
