--- a/data/rush/19096.yaml
+++ b/data/rush/19096.yaml
@@ -44,7 +44,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Lady Sisters", and cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Lady Sisters" and it cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, increase this card's Level by 5.
   de:
   es:
   fr:
@@ -80,7 +80,4 @@ sets:
     rarities:
     - Super Rare
     - Over Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 936324
