--- a/data/rush/19097.yaml
+++ b/data/rush/19097.yaml
@@ -28,7 +28,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 2 WIND Attribute Winged Beast Type monsters from your Graveyard into the Deck.
+    Shuffle 2 WIND Attribute Winged Beast Type monsters from your Graveyard into your Deck.
   de:
   es:
   fr:
@@ -79,7 +79,4 @@ sets:
     rarities:
     - Super Rare
     - Over Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 936321
