--- a/data/rush/19314.yaml
+++ b/data/rush/19314.yaml
@@ -1,6 +1,6 @@
 konami_id: 19314
 name:
-  en: Rising Light Angel Esser
+  en: Rising Light Angel Essel
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you activated this effect during the first turn of the second player, you can Special Summon 1 monster from either Graveyard face-up to your field.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you activated this effect during the first turn of the player going second, you can Special Summon 1 monster from either player's Graveyard face-up on your field.
   de:
   es:
   fr:
@@ -48,10 +48,10 @@ atk: 1000
 def: 1000
 images:
 - index: 1
-  image: RisingLightAngelEsser-RDKP14-JP-SR.png
-  illustration: RisingLightAngelEsser-OW.png
+  image: RisingLightAngelEssel-RDKP14-JP-SR.png
+  illustration: RisingLightAngelEssel-OW.png
 - index: 2
-  image: RisingLightAngelEsser-RDKP14-JP-ScR-AA.png
+  image: RisingLightAngelEssel-RDKP14-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP14-JP037
@@ -65,9 +65,4 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 975307
