--- a/data/rush/16349.yaml
+++ b/data/rush/16349.yaml
@@ -1,6 +1,6 @@
 konami_id: 16349
 name:
-  en: Vicissitude of Providence
+  en: Transmigration of Curiosity
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 4 monsters with 100 or less DEF from your Graveyard into the Deck.
+    Shuffle 4 monsters with 100 or less DEF from your Graveyard to your Deck.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: VicissitudeofProvidence-RDSBD6-JP-C.png
+  image: TransmigrationofCuriosity-RDSBD6-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP043
@@ -64,9 +64,4 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717389
