--- a/data/rush/16589.yaml
+++ b/data/rush/16589.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Cyberse Type monster to the Graveyard by this effect, you can add Cyberse Type monsters with 0 DEF from your Graveyard to your hand, up to [the number of face-up monsters on your opponent's field].
+    Send the top card of your Deck to the Graveyard. Then, if a Cyberse Type monster was sent to the Graveyard by this effect, you can add Cyberse Type monsters with 0 DEF from your Graveyard to your hand, up to [the number of face-up monsters on your opponent's field].
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716633
