--- a/data/rush/16712.yaml
+++ b/data/rush/16712.yaml
@@ -1,6 +1,6 @@
 konami_id: 16712
 name:
-  en: Iron Onslaught
+  en: Barrage of Steel
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: IronOnslaught-RDSD02-JP-C.png
+  image: BarrageofSteel-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP054
@@ -72,9 +72,4 @@ sets:
     set_name: Strongest Battle Deck Yuhi - Join and Explode! Join and Intensify!
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715442
