--- a/data/rush/16791.yaml
+++ b/data/rush/16791.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your opponent has a face-up Level 5 or higher monster on their field, reveal up to 2 Cyberse Type monsters in your hand to your opponent.
+    If your opponent has a face-up Level 5 or higher monster on their field, reveal up to 2 Cyberse Type monsters in your hand.
   de:
   es:
   fr:
@@ -60,7 +60,4 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716701
