--- a/data/rush/16792.yaml
+++ b/data/rush/16792.yaml
@@ -1,6 +1,6 @@
 konami_id: 16792
 name:
-  en: Berceptacle Mani
+  en: Belsectacle Mani
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses ATK equal to [the number of face-up Cyberse Type monsters on your field] x 300 until the end of this turn.
+    1 face-up monster on your opponent's field loses ATK equal to [the number of face-up Cyberse monsters on your field] x 300 until the end of this turn.
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2300
 def: 0
 images:
 - index: 1
-  image: BerceptacleMani-RDSBD6-JP-C.png
+  image: BelsectacleMani-RDSBD6-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD6-JP005
@@ -60,9 +60,4 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713679
