--- a/data/rush/18945.yaml
+++ b/data/rush/18945.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field, then return it to its original position. Then, if it was a Spell Card, you can destroy it.
+    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if that card is a Spell Card, you can destroy it.
   de:
   es:
   fr:
@@ -62,9 +62,4 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 930142
