--- a/rush.yaml
+++ b/rush.yaml
@@ -31420,7 +31420,7 @@ yugipedia_page_id: 716513
 ---
 konami_id: 16349
 name:
-  en: Vicissitude of Providence
+  en: Transmigration of Curiosity
   de:
   es:
   fr:
@@ -31434,7 +31434,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 4 monsters with 100 or less DEF from your Graveyard into the Deck.
+    Shuffle 4 monsters with 100 or less DEF from your Graveyard to your Deck.
   de:
   es:
   fr:
@@ -31464,7 +31464,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: VicissitudeofProvidence-RDSBD6-JP-C.png
+  image: TransmigrationofCuriosity-RDSBD6-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP043
@@ -31484,11 +31484,6 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717389
 ---
 konami_id: 16350
@@ -34678,7 +34673,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Cyberse Type monster to the Graveyard by this effect, you can add Cyberse Type monsters with 0 DEF from your Graveyard to your hand, up to [the number of face-up monsters on your opponent's field].
+    Send the top card of your Deck to the Graveyard. Then, if a Cyberse Type monster was sent to the Graveyard by this effect, you can add Cyberse Type monsters with 0 DEF from your Graveyard to your hand, up to [the number of face-up monsters on your opponent's field].
   de:
   es:
   fr:
@@ -34712,9 +34707,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716633
 ---
 konami_id: 16590
@@ -34840,9 +34832,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717246
 ---
 konami_id: 16592
@@ -38679,11 +38668,6 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716439
 ---
 konami_id: 16690
@@ -40016,11 +40000,6 @@ sets:
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716997
 ---
 konami_id: 16710
@@ -40166,7 +40145,7 @@ yugipedia_page_id: 716353
 ---
 konami_id: 16712
 name:
-  en: Iron Onslaught
+  en: Barrage of Steel
   de:
   es:
   fr:
@@ -40210,7 +40189,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: IronOnslaught-RDSD02-JP-C.png
+  image: BarrageofSteel-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP054
@@ -40238,11 +40217,6 @@ sets:
     set_name: Strongest Battle Deck Yuhi - Join and Explode! Join and Intensify!
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715442
 ---
 konami_id: 16713
@@ -42979,7 +42953,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your opponent has a face-up Level 5 or higher monster on their field, reveal up to 2 Cyberse Type monsters in your hand to your opponent.
+    If your opponent has a face-up Level 5 or higher monster on their field, reveal up to 2 Cyberse Type monsters in your hand.
   de:
   es:
   fr:
@@ -43025,14 +42999,11 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716701
 ---
 konami_id: 16792
 name:
-  en: Berceptacle Mani
+  en: Belsectacle Mani
   de:
   es:
   fr:
@@ -43060,7 +43031,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses ATK equal to [the number of face-up Cyberse Type monsters on your field] x 300 until the end of this turn.
+    1 face-up monster on your opponent's field loses ATK equal to [the number of face-up Cyberse monsters on your field] x 300 until the end of this turn.
   de:
   es:
   fr:
@@ -43080,7 +43051,7 @@ atk: 2300
 def: 0
 images:
 - index: 1
-  image: BerceptacleMani-RDSBD6-JP-C.png
+  image: BelsectacleMani-RDSBD6-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD6-JP005
@@ -43092,11 +43063,6 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713679
 ---
 konami_id: 16793
@@ -43115,7 +43081,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An electronic beast that carries information throughout the Network World. After changes through the generations, its breed improved, resulting in a personality that lacks any hint of being two-faced.
+    A digital beast that transports information through the network world. Through generations of modification, it has evolved into a creature with a straightforward and honest nature.
   de:
   es:
   fr:
@@ -43147,11 +43113,6 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714318
 ---
 konami_id: 16794
@@ -43212,11 +43173,6 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716168
 ---
 konami_id: 16795
@@ -49273,7 +49229,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add all Cyberse Type monsters from your Graveyard to your hand. Then, place this card from your field on the bottom of the owner's Deck.
+    Add all Cyberse Type monsters from your Graveyard to your hand. Then, place this card on the bottom of the owner's Deck.
   de:
   es:
   fr:
@@ -49307,9 +49263,6 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717408
 ---
 konami_id: 16986
@@ -53199,7 +53152,7 @@ yugipedia_page_id: 716521
 ---
 konami_id: 17202
 name:
-  en: Attolashoot Highdron
+  en: Attrashoot Hydron
   de:
   es:
   fr:
@@ -53227,7 +53180,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of monsters in your Graveyard] x 100 until the end of this turn. Then, if you have 8 or more Cyberse Type monsters in your Graveyard, you can draw 1 card.
+    This card gains ATK equal to [the number of monsters in your Graveyard] x 100 until the end of this turn. Then, if there are 8 or more Cyberse Type monsters in your Graveyard, you can draw 1 card.
   de:
   es:
   fr:
@@ -53249,7 +53202,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: AttolashootHighdron-RDGRP1-JP-UR.png
+  image: AttrashootHydron-RDGRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP013
@@ -53263,11 +53216,6 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713316
 ---
 konami_id: 17203
@@ -53617,11 +53565,6 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714381
 ---
 konami_id: 17208
@@ -55593,7 +55536,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The source of the draconic tree that is connected to another providence. It conceals infinite branches that lead to an unseen world.
+    The origin of the dragon tree, connected to a different curiosity. With its concealed infinite branches, it unfolds into unknown worlds.
   de:
   es:
   fr:
@@ -55627,11 +55570,6 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714458
 ---
 konami_id: 17278
@@ -57371,7 +57309,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your opponent has 1 or less cards in their hand, shuffle 1 Thunder Type monster from your Graveyard into the Deck.
+    If your opponent has 1 card or less in their hand, shuffle 1 Thunder Type monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -57417,11 +57355,6 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713921
 ---
 konami_id: 17306
@@ -57440,7 +57373,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has 2 or less cards in their hand.
+    Your opponent has 2 cards or less in their hand.
   de:
   es:
   fr:
@@ -57486,16 +57419,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716884
 ---
 konami_id: 17307
 name:
-  en: Blitzkrieg Cavalry Triggerdrago
+  en: Thunder Cavalry Triggerdrago
   de:
   es:
   fr:
@@ -57523,7 +57451,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 300 ATK until the end of this turn. Then, if your opponent has no cards in their hand, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    This card gains 300 ATK until the end of this turn. Then, if your opponent has no cards in their hand, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
@@ -57543,7 +57471,7 @@ atk: 2500
 def: 1500
 images:
 - index: 1
-  image: BlitzkriegCavalryTriggerdrago-RDKP08-JP-UR.png
+  image: ThunderCavalryTriggerdrago-RDKP08-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP08-JP031
@@ -57555,11 +57483,6 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Ultra Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713963
 ---
 konami_id: 17308
@@ -59385,7 +59308,7 @@ yugipedia_page_id: 714289
 ---
 konami_id: 17332
 name:
-  en: Trailblitzing Thunderbolt
+  en: Trailblitzing Thunderblast
   de:
   es:
   fr:
@@ -59429,7 +59352,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TrailblitzingThunderbolt-RDKP08-JP-C.png
+  image: TrailblitzingThunderblast-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP056
@@ -59441,11 +59364,6 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717182
 ---
 konami_id: 17333
@@ -68470,7 +68388,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 4 cards of your Deck to the Graveyard. You can only attack with DARK Attribute Spellcaster Type monsters this turn.
+    Send the top 4 cards of your Deck to the Graveyard. This turn, you can only attack with DARK Attribute Spellcaster Type monsters.
   de:
   es:
   fr:
@@ -68508,11 +68426,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714485
 ---
 konami_id: 17672
@@ -78459,7 +78372,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack while you have a Machine Type or Thunder Type monster in your Graveyard.
+    When an opponent's monster declares an attack while you have a Machine or Thunder Type monster in your Graveyard.
   de:
   es:
   fr:
@@ -78501,11 +78414,6 @@ sets:
     set_name: Strongest Battle Deck Yuhi - Join and Explode! Join and Intensify!
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717140
 ---
 konami_id: 17946
@@ -103580,11 +103488,6 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 930140
 ---
 konami_id: 18944
@@ -103688,7 +103591,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field, then return it to its original position. Then, if it was a Spell Card, you can destroy it.
+    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if that card is a Spell Card, you can destroy it.
   de:
   es:
   fr:
@@ -103722,11 +103625,6 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 930142
 ---
 konami_id: 18946
@@ -107604,7 +107502,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Lady Sisters", and cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Lady Sisters" and it cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, increase this card's Level by 5.
   de:
   es:
   fr:
@@ -107640,9 +107538,6 @@ sets:
     rarities:
     - Super Rare
     - Over Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 936324
 ---
 konami_id: 19097
@@ -107675,7 +107570,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 2 WIND Attribute Winged Beast Type monsters from your Graveyard into the Deck.
+    Shuffle 2 WIND Attribute Winged Beast Type monsters from your Graveyard into your Deck.
   de:
   es:
   fr:
@@ -107726,9 +107621,6 @@ sets:
     rarities:
     - Super Rare
     - Over Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 936321
 ---
 konami_id: 19098
@@ -107777,7 +107669,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Lady Sisters", and cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters per turn.
+    This card's name becomes "Harpie Lady Sisters" and it cannot be destroyed by your opponent's monster effects. If this card is in Maximum Mode, it can make up to 3 attacks on monsters each turn.
   de:
   es:
   fr:
@@ -107813,9 +107705,6 @@ sets:
     rarities:
     - Super Rare
     - Over Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 936327
 ---
 konami_id: 19099
@@ -113673,7 +113562,7 @@ yugipedia_page_id: 975305
 ---
 konami_id: 19314
 name:
-  en: Rising Light Angel Esser
+  en: Rising Light Angel Essel
   de:
   es:
   fr:
@@ -113701,7 +113590,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you activated this effect during the first turn of the second player, you can Special Summon 1 monster from either Graveyard face-up to your field.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you activated this effect during the first turn of the player going second, you can Special Summon 1 monster from either player's Graveyard face-up on your field.
   de:
   es:
   fr:
@@ -113721,10 +113610,10 @@ atk: 1000
 def: 1000
 images:
 - index: 1
-  image: RisingLightAngelEsser-RDKP14-JP-SR.png
-  illustration: RisingLightAngelEsser-OW.png
+  image: RisingLightAngelEssel-RDKP14-JP-SR.png
+  illustration: RisingLightAngelEssel-OW.png
 - index: 2
-  image: RisingLightAngelEsser-RDKP14-JP-ScR-AA.png
+  image: RisingLightAngelEssel-RDKP14-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP14-JP037
@@ -113738,11 +113627,6 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 975307
 ---
 konami_id: 19315
