--- a/data/cards/71614230.yaml
+++ b/data/cards/71614230.yaml
@@ -9,7 +9,7 @@ name:
   pt: Espírito do Kendo Kai-Den
   ja: ケンドウ<ruby>魂<rt>スピリット</rt></ruby> <ruby>ＫＡＩ－ＤＥＮ<rt>カイデン</rt></ruby>
   ja_romaji: Kendō Supiritto Kaiden
-  ko: 켄도 스피릿 {KAI(카이)}－{DEN(덴)}
+  ko: 켄도 스피릿 {KAI－DEN(카이덴)}
   ko_rr: Kendo Seupirit Kai Den
   zh-TW:
   zh-CN: 剑道魂 皆传
