--- a/data/cards/12450071.yaml
+++ b/data/cards/12450071.yaml
@@ -9,7 +9,7 @@ name:
   pt: Mago F Proxy
   ja: プロキシー・<ruby>Ｆ<rt>エフ</rt></ruby>・マジシャン
   ja_romaji: Purokishī Efu Majishan
-  ko: 프록시 F 매지션
+  ko: 프록시 {F(에프)} 매지션
   ko_rr: Peuroksi Epeu Maejisyeon
   zh-TW:
   zh-CN: 代理・F・魔术师
@@ -35,9 +35,7 @@ text:
   ja: |-
     効果モンスター２体
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。自分フィールドから、融合モンスターカードによって決められた融合素材モンスターを墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。②：このカードのリンク先に融合モンスターが融合召喚された場合に発動できる。手札から攻撃力１０００以下のモンスター１体を特殊召喚する。
-  ko: |-
-    효과 몬스터 2장
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 자신 필드에서, 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. ②: 이 카드의 링크 앞에 융합 몬스터가 융합 소환되었을 경우에 발동할 수 있다. 패에서 공격력 1000 이하의 몬스터 1장을 특수 소환한다.
+  ko: |
   zh-TW: |-
     效果怪獸２隻
     此卡名的①②效果，１回合各僅限使用１次。①：可在我方主要階段發動。從我方場上將根據融合怪獸卡決定的融合素材怪獸送至墓地，從額外牌組融合召喚１隻該融合怪獸。②：可在融合怪獸被融合召喚至此卡連結指向的位置的狀況下發動。從手牌特殊召喚１隻攻擊力１０００以下的怪獸。
