--- a/data/cards/76552147.yaml
+++ b/data/cards/76552147.yaml
@@ -9,7 +9,7 @@ name:
   pt: D.D.D. - Derby de uma Dimensão Diferente
   ja: <ruby>Ｄ・Ｄ・Ｄ<rt>ディファレント・ディメンション・ダービー</rt></ruby>
   ja_romaji: Difarento Dimenshon Dābī
-  ko: <ruby>D·D·D<rt>디퍼렌트 디멘션 더비</rt></ruby>
+  ko: '{D·D·D(디퍼런트 디멘션 더비)}'
   ko_rr: Dipeorenteu Dimensyeon Deobi
   zh-TW:
   zh-CN: 异次元赛马
@@ -30,10 +30,7 @@ text:
     ①：以下のいずれかのモンスターが自分フィールドに表側表示で存在する場合、フィールドのカード１枚を対象として発動できる。そのカードを除外する。
     ●通常モンスターを使用して儀式召喚したモンスター
     ●通常モンスターを素材として融合・Ｓ・Ｘ・リンク召喚したモンスター
-  ko: |-
-    ①: 이하의 어느 몬스터가 자신 필드에 앞면 표시로 존재할 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다.
-    ●일반 몬스터를 사용하여 의식 소환한 몬스터
-    ●일반 몬스터를 소재로서 융합 / 싱크로 / 엑시즈 / 링크 소환한 몬스터
+  ko: |
   zh-TW: |-
     ①：在以下任一怪獸以正面表示存在我方場上的狀況下，可將場上的１張卡做為對象發動。將該卡除外。
     ●使用通常怪獸儀式召喚的怪獸
