--- a/data/cards/77511331.yaml
+++ b/data/cards/77511331.yaml
@@ -9,7 +9,7 @@ name:
   pt: Espírito do Caratê Kuro-Obi
   ja: カラテ<ruby>魂<rt>スピリット</rt></ruby> <ruby>ＫＵＲＯ－ＯＢＩ<rt>クロオビ</rt></ruby>
   ja_romaji: Karate Supiritto Kuro'obi
-  ko: 가라데 스피릿 {KURO(쿠로)}－{OBI(오비)}
+  ko: 가라데 스피릿 {KURO－OBI(쿠로오비)}
   ko_rr: Garade Seupirit Kuro Obi
   zh-TW:
   zh-CN: 空手魂 黑带
