--- a/data/cards/82041999.yaml
+++ b/data/cards/82041999.yaml
@@ -9,7 +9,7 @@ name:
   pt: Madame Aranha Joruri-P.U.N.K.
   ja: <ruby>Ｊｏ<rt>ジョウルリ</rt></ruby>－<ruby>Ｐ．Ｕ．Ｎ．Ｋ．<rt>パンク</rt></ruby><ruby>Ｍｍｅ．<rt>マダム</rt></ruby>スパイダー
   ja_romaji: Joururi-Panku Madamu Supaidā
-  ko: '{Jo(조루리)}－{P.U.N.K.(펑크)}{Mme.(마담)} 스파이더'
+  ko: '{Jo(조루리)}－{P.U.N.K.Mme.(펑크마담)} 스파이더'
   ko_rr: Joruri - Peongkeu Madam Seupaideo
   zh-TW:
   zh-CN: 净－朋.克.蜘蛛夫人
