--- a/rush.yaml
+++ b/rush.yaml
@@ -18890,7 +18890,7 @@ name:
   pt:
   ja: <ruby>１０ｓｉｏｎ<rt>テンション</rt></ruby><ruby>ＭＡＸ<rt>マックス</rt></ruby>！！！
   ja_romaji: Tenshon Makkusu!!!
-  ko: '{10sionMAX!(텐션맥스)}!!'
+  ko: '{10sionMAX(텐션맥스)}!!!'
   ko_rr:
   zh-TW:
   zh-CN:
@@ -36486,8 +36486,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 715273
@@ -64495,8 +64493,6 @@ sets:
     rarities:
     - Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716631
@@ -90411,8 +90407,6 @@ sets:
     - Super Rare
     - Secret Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 715274
@@ -102057,8 +102051,6 @@ sets:
     - Super Rare
     - Secret Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 806120
