--- a/data/rush/17929.yaml
+++ b/data/rush/17929.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have 2 or less cards in your hand, shuffle 1 monster from your Graveyard into the Deck.
+    If you have 2 cards or less in your hand, shuffle 1 monster from your Graveyard into the Deck.
   de:
   es:
   fr:
