--- a/data/rush/18242.yaml
+++ b/data/rush/18242.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have a monster on your field equipped with an Equip Spell Card, this card gains 700 ATK.
+    If you have a monster equipped with an Equip Spell Card on your field, this card gains 700 ATK.
   de:
   es:
   fr:
