--- a/data/rush/18338.yaml
+++ b/data/rush/18338.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Neither player can Special Summon Level 7 monsters from the hand or Graveyard. Also, if this card is in Maximum Mode, your opponent cannot Set monsters from their hand.
+    Neither player can Special Summon Level 7 monsters from the hand or Graveyard. Then, if this card is in Maximum Mode, your opponent cannot Set monsters from their hand.
   de:
   es:
   fr:
