--- a/data/rush/yugipedia1033306.yaml
+++ b/data/rush/yugipedia1033306.yaml
@@ -42,7 +42,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This Attack Position card cannot be destroyed by battle with a monster with 2500 original ATK.
+    This Attack Position card cannot be destroyed by battle with a monster that has 2500 original ATK.
   de:
   es:
   fr:
