--- a/data/rush/19300.yaml
+++ b/data/rush/19300.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, during your opponent's turn, this card cannot be destroyed by your opponent's card effects.
+    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Then, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, during your opponent's turn, this card cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
