--- a/data/rush/19801.yaml
+++ b/data/rush/19801.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster can attack twice per turn.
+    The equipped monster can attack twice each turn.
   de:
   es:
   fr:
