--- a/data/rush/yugipedia1044873.yaml
+++ b/data/rush/yugipedia1044873.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK. If the equipped monster is "Valkyrion the Unity Warrior", it can make up to 2 attacks on monsters per turn.
+    The equipped monster gains 300 ATK. If the equipped monster is "Valkyrion the Unity Warrior", it can make up to 2 attacks on monsters each turn.
   de:
   es:
   fr:
