--- a/rush.yaml
+++ b/rush.yaml
@@ -68142,8 +68142,8 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● All face-up monsters on your field gain 500 ATK until the end of this turn. Also, this card can make up to 2 attacks on monsters during this turn.
-    ● All face-up monsters on your field cannot be destroyed by battle or your opponent's Trap Card effects until the end of this turn. Also, this card can attack twice during this turn.
+    ● All face-up monsters on your field gain 500 ATK until the end of this turn, also this card can make up to 2 attacks on monsters during this turn.
+    ● All face-up monsters on your field cannot be destroyed by battle or your opponent's Trap Card effects until the end of this turn, also this card can attack twice during this turn.
   de:
   es:
   fr:
@@ -77276,7 +77276,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have 2 or less cards in your hand, shuffle 1 monster from your Graveyard into the Deck.
+    If you have 2 cards or less in your hand, shuffle 1 monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -81517,7 +81517,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have a monster on your field equipped with an Equip Spell Card, this card gains 700 ATK.
+    If you have a monster equipped with an Equip Spell Card on your field, this card gains 700 ATK.
   de:
   es:
   fr:
@@ -82282,7 +82282,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn, your opponent has 4 or less cards in their hand, and you have 2 face-up non-Level 3 Psychic Type monsters on your field.
+    You Normal Summoned this card this turn, your opponent has 4 cards or less in their hand, and you have 2 face-up non-Level 3 Psychic Type monsters on your field.
   de:
   es:
   fr:
@@ -83665,7 +83665,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of face-up Normal Monsters on your field] x 300. Also, if the equipped monster is "Galactica Oblivion", it gains additional 1000 ATK.
+    The equipped monster gains ATK equal to [the number of face-up Normal Monsters on your field] x 300. Then, if the equipped monster is "Galactica Oblivion", it gains additional 1000 ATK.
   de:
   es:
   fr:
@@ -84467,7 +84467,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster can attack twice per turn.
+    The equipped monster can attack twice each turn.
   de:
   es:
   fr:
@@ -86053,7 +86053,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
   de:
   es:
   fr:
@@ -86216,7 +86216,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Neither player can Special Summon Level 7 monsters from the hand or Graveyard. Also, if this card is in Maximum Mode, your opponent cannot Set monsters from their hand.
+    Neither player can Special Summon Level 7 monsters from the hand or Graveyard. Then, if this card is in Maximum Mode, your opponent cannot Set monsters from their hand.
   de:
   es:
   fr:
@@ -87028,7 +87028,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card can attack twice per turn.
+    This card can attack twice each turn.
   de:
   es:
   fr:
@@ -106407,7 +106407,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 400 ATK, and it cannot be destroyed by your opponent's card effects. Also, if the equipped monster is a Fusion Monster, it gains additional 600 ATK.
+    The equipped monster gains 400 ATK, and it cannot be destroyed by your opponent's card effects. Then, if the equipped monster is a Fusion Monster, it gains additional 600 ATK.
   de:
   es:
   fr:
@@ -106545,7 +106545,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if the equipped monster is Magical Knight Type, it gains additional [its Level] x 200 ATK.
+    The equipped monster gains 200 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if the equipped monster is Magical Knight Type, it gains additional [its Level] x 200 ATK.
   de:
   es:
   fr:
@@ -111142,7 +111142,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Increase this card's Level by 6. Also, if you have a Level 7 or higher Machine Type monster in your Graveyard, this card cannot be destroyed by card effects.
+    Increase this card's Level by 6. Then, if you have a Level 7 or higher Machine Type monster in your Graveyard, this card cannot be destroyed by card effects.
   de:
   es:
   fr:
@@ -112531,7 +112531,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, during your opponent's turn, this card cannot be destroyed by your opponent's card effects.
+    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Then, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, during your opponent's turn, this card cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -128829,7 +128829,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster can attack twice per turn.
+    The equipped monster can attack twice each turn.
   de:
   es:
   fr:
@@ -134335,7 +134335,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This Attack Position card cannot be destroyed by battle with a monster with 2500 original ATK.
+    This Attack Position card cannot be destroyed by battle with a monster that has 2500 original ATK.
   de:
   es:
   fr:
@@ -135818,7 +135818,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK. If the equipped monster is "Valkyrion the Unity Warrior", it can make up to 2 attacks on monsters per turn.
+    The equipped monster gains 300 ATK. If the equipped monster is "Valkyrion the Unity Warrior", it can make up to 2 attacks on monsters each turn.
   de:
   es:
   fr:
