--- a/rush.yaml
+++ b/rush.yaml
@@ -50131,7 +50131,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field, then return it to its original position. Then, if your opponent has a card with the same name as it in their Graveyard, you can destroy that card.
+    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if your opponent has a card with the same name as that card in their Graveyard, you can destroy it.
   de:
   es:
   fr:
@@ -50285,7 +50285,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of monsters on the field] x 300 until the end of this turn.
-    ● Look at all face-down Spell/Trap Cards on your opponent's field, then return them to their original positions, and destroy 1 of them.
+    ● Look at all face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them.
   de:
   es:
   fr:
@@ -84600,7 +84600,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at up to 2 face-down Spell/Trap Cards on your opponent's field, then return them to their original positions, and destroy 1 of them. Then, if you have "CAN:D" face-up on your field, you can gain 1000 LP.
+    Look at up to 2 face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them. Then, if you have "CAN:D" face-up on your field, you can gain 1000 LP.
   de:
   es:
   fr:
@@ -99630,7 +99630,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK/DEF. Also, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains additional [its original ATK] ATK.
+    The equipped monster gains 200 ATK/DEF. Then, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains additional [its original ATK] ATK.
   de:
   es:
   fr:
@@ -101406,7 +101406,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down monster on your opponent's field, then return it to its original position. Then, if your opponent has a monster with the same DEF as its original DEF in their Graveyard, you can destroy that monster.
+    Look at 1 face-down monster on your opponent's field. Then, if your opponent has a monster with the same DEF as that monster's original DEF in their Graveyard, you can destroy it.
   de:
   es:
   fr:
@@ -105592,7 +105592,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, this card can make up to 2 attacks on monsters during this turn.
+    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, it can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -106681,7 +106681,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster cannot be destroyed by your opponent's card effects. Also, if you have an Equip Spell Card in your Graveyard, the equipped monster gains 300 ATK.
+    The equipped monster cannot be destroyed by your opponent's card effects. Then, if you have an Equip Spell Card in your Graveyard, the equipped monster gains 300 ATK.
   de:
   es:
   fr:
@@ -110014,7 +110014,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 500 ATK. Also, it gains additional 500 ATK, if you have 5 or more Wyrm Type monsters in your Graveyard.
+    The equipped monster gains 500 ATK. Then, it gains additional 500 ATK, if you have 5 or more Wyrm Type monsters in your Graveyard.
   de:
   es:
   fr:
@@ -113789,7 +113789,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down card on your opponent's field, then return it to its original position. Then, if it was a Monster Card with 1500 or more DEF, you can destroy it.
+    Look at 1 face-down card on your opponent's field. Then, if that card is a Monster Card with 1500 or more DEF, you can destroy it.
   de:
   es:
   fr:
@@ -114484,7 +114484,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of different Types among the face-up monsters on the field] x 300. Also, if the equipped monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects.
+    The equipped monster gains ATK equal to [the number of different Types among the face-up monsters on the field] x 300. Then, if the equipped monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -114630,7 +114630,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster cannot be destroyed by your opponent's card effects. Also, if you have an Equip Spell Card in your Graveyard, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    The equipped monster cannot be destroyed by your opponent's card effects. Then, if you have an Equip Spell Card in your Graveyard, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -120299,7 +120299,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Vi-FRND" face-up on your field, you can look at up to 2 face-down cards on your opponent's field, then return them to their original positions.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Vi-FRND" face-up on your field, you can look at up to 2 face-down cards on your opponent's field.
   de:
   es:
   fr:
@@ -125534,7 +125534,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK. Also, if the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK, and it cannot be destroyed by your opponent's card effects.
+    The equipped monster gains 300 ATK. Then, if the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK, and it cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -129245,7 +129245,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down card in your opponent's Spell & Trap Zone, then return it to its original position. Then, if it was a Trap Card, destroy that card.
+    Look at 1 face-down card in your opponent's Spell & Trap Zone. Then, if that card is a Trap Card, destroy it.
   de:
   es:
   fr:
@@ -131295,7 +131295,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Jinzo" from your Graveyard face-up to your field. Then, you can look at all face-down cards in your opponent's Spell & Trap Zone, then return them to their original positions. If you do, destroy all Trap Cards among them.
+    Special Summon 1 "Jinzo" from your Graveyard face-up to your field. Then, you can look at all face-down cards in your opponent's Spell & Trap Zone. If you do, destroy all Trap Cards among them.
   de:
   es:
   fr:
@@ -132446,7 +132446,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 monster from your opponent's Graveyard on the bottom of their Deck, and this card gains ATK equal to [the Level of the monster placed by this effect] x 200 until the end of this turn. Then, if this card is equipped with an Equip Spell Card, this turn, this card cannot be destroyed by card effects, and can make up to 2 attacks on monsters.
+    Place 1 monster from your opponent's Graveyard on the bottom of their Deck, and this card gains ATK equal to [the Level of the monster placed by this effect] x 200 until the end of this turn. Then, if this card is equipped with an Equip Spell Card, this turn, it cannot be destroyed by card effects, and can make up to 2 attacks on monsters.
   de:
   es:
   fr:
@@ -133511,7 +133511,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Spell Card or 1 face-down Spell/Trap Card on your opponent's field. If that card is face-up, destroy it. If that card is face-down, look at it, then return it to its original position. Then, if it was a Spell Card, destroy it.
+    Choose 1 face-up Spell Card or 1 face-down Spell/Trap Card on your opponent's field. If that card is face-up, destroy it. If that card is face-down, look at it. Then, if it is a Spell Card, destroy it.
   de:
   es:
   fr:
