--- a/data/cards/44455560.yaml
+++ b/data/cards/44455560.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 44455560
 name:
   en: Fire King Consort Ulkanix
   de:
@@ -35,7 +35,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingConsortUlkanix-YO08-JP-OP.png
+  image: FireKingConsortUlkanix-YO08-JP-UR.png
 sets:
   ja:
   - set_number: YO08-JP001
