--- a/data/cards/78229193.yaml
+++ b/data/cards/78229193.yaml
@@ -19,7 +19,8 @@ text:
     Once per turn: You can target 1 face-up monster your opponent controls; its ATK becomes half its original ATK until the end of this turn. If this card in your possession is destroyed by an opponent's card and sent to your GY: You can banish 1 other WATER monster from your GY; Special Summon this card as a Tuner.
   de: |-
     1 Empfänger + 1+ Nicht-Empfänger-Monster
-    Einmal pro Spielzug: Du kannst 1 offenes Monster wählen, das dein Gegner kontrolliert; seine ATK werden bis zum Ende dieses Spielzugs gleich der Hälfte seiner Grund-ATK. Falls diese Karte, die du kontrollierst, durch eine Karte deines Gegners (durch Kampf oder einen Karteneffekt) zerstört und auf deinen Friedhof gelegt wird: Du kannst 1 anderes WASSER Monster von deinem Friedhof verbannen; beschwöre diese Karte als Spezialbeschwörung und falls du dies tust, wird sie als Empfänger behandelt.
+    (Diese Karte wird immer als „Weißaura“-Karte behandelt.)
+    Einmal pro Spielzug: Du kannst 1 offenes Monster wählen, das dein Gegner kontrolliert; seine ATK werden bis zum Ende dieses Spielzugs gleich der Hälfte seiner Grund-ATK. Falls diese Karte, die dir gehört, durch eine Karte eines Gegners zerstört und auf deinen Friedhof gelegt wird: Du kannst 1 anderes WASSER Monster von deinem Friedhof verbannen; beschwöre diese Karte als Spezialbeschwörung als Empfänger.
   es: |-
     1 Cantante + 1+ monstruos que no sean Cantantes
     Una vez por turno: puedes seleccionar 1 monstruo boca arriba que controle tu adversario; hasta el final de este turno, su ATK se convierte en la mitad de su ATK original. Si esta carta que controlas es destruida por una carta de tu adversario (en batalla o por efecto de una carta) y mandada a tu Cementerio: puedes desterrar otro monstruo de AGUA en tu Cementario; Invoca esta carta de Modo Especial y, si lo haces, es tratada como Cantante.
