--- a/data/cards/27847700.yaml
+++ b/data/cards/27847700.yaml
@@ -44,7 +44,7 @@ images:
   illustration: Polymerization-TF05-JP-VG-artwork-2.png
 - index: '1.1'
   image: Polymerization-HAC1-EN-DUPR-1E.png
-  illustration: Polymerization-TF04-EN-VG.jpg
+  illustration: Polymerization-TF04-EN-VG-artwork-2.png
 - index: '1.2'
   image: Polymerization-PGB1-JP-MLR.png
   illustration: Polymerization-JP-CA-3.png
