--- a/data/cards/14225239.yaml
+++ b/data/cards/14225239.yaml
@@ -33,7 +33,7 @@ text:
     "Homem Bolha, o HERÓI do Elemento" + "Aviário, o HERÓI do Elemento"
     Deve ser Invocado por Invocação-Fusão. Enquanto você tiver cards Baixados na sua Zona de Magias & Armadilhas, este card pode atacar seu oponente diretamente.
   ja: |-
-    「E・HERO バブルマン」＋「E・HERO フェザーマン」
+    「Ｅ・ＨＥＲＯ バブルマン」＋「Ｅ・ＨＥＲＯ フェザーマン」
     このモンスターは融合召喚でしか特殊召喚できない。自分の魔法＆罠カードゾーンにカードがセットされている場合、このカードは相手プレイヤーに直接攻撃をする事ができる。
   ko: |-
     "엘리멘틀 히어로 버블맨" ＋ "엘리멘틀 히어로 페더맨"
