--- a/data/cards/22147147.yaml
+++ b/data/cards/22147147.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Equipe apenas em um monstro "HERÓI do Destino". No final da Etapa de Dano, se o monstro equipado tiver atacado: Escolha 1 Card de Magia/Armadilha no campo; destrua esse alvo.
   ja: |-
-    「D-HERO」と名のついたモンスターにのみ装備可能。装備モンスターが攻撃を行ったダメージステップ終了時、フィールド上の魔法・罠カード１枚を選択して破壊する。
+    「Ｄ－ＨＥＲＯ」と名のついたモンスターにのみ装備可能。装備モンスターが攻撃を行ったダメージステップ終了時、フィールド上の魔法・罠カード１枚を選択して破壊する。
   ko: |-
     "데스티니 히어로"라는 이름이 붙은 몬스터에만 장착 가능. 장착 몬스터가 공격을 실행한 데미지 스텝 종료시, 필드 위의 마법 / 함정 카드 1장을 선택하고 파괴한다.
   zh-TW: |-
