--- a/data/cards/09201964.yaml
+++ b/data/cards/09201964.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando seu oponente declarar um ataque direto: Bana 1 monstro "HERÓI do Destino" do seu Cemitério; encerre a Fase de Batalha.
   ja: |-
-    相手が直接攻撃を宣言した時に発動する事ができる。自分の墓地に存在する「D-HERO」と名のついたモンスター１体をゲームから除外する事で、バトルフェイズを終了する。
+    相手が直接攻撃を宣言した時に発動する事ができる。自分の墓地に存在する「Ｄ－ＨＥＲＯ」と名のついたモンスター１体をゲームから除外する事で、バトルフェイズを終了する。
   ko: |-
     상대가 직접 공격을 선언했을 때 발동할 수 있다. 자신의 묘지에 존재하는 "데스티니 히어로"라는 이름이 붙은 몬스터 1장을 게임에서 제외하는 것으로, 배틀 페이즈를 종료한다.
   zh-TW: |-
