--- a/data/cards/10759529.yaml
+++ b/data/cards/10759529.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando um monstro do seu oponente declarar um ataque: Ofereça como Tributo 1 "Herói Criança"; negue o ataque e, depois, adicione 1 monstro "HERÓI do Elemento" do seu Deck à sua mão.
   ja: |-
-    自分フィールド上に存在する「ヒーロー・キッズ」１体を生け贄に捧げる。相手モンスターの攻撃を無効にし、自分のデッキから「E・HERO」と名のついたモンスター１体を手札に加える。
+    自分フィールド上に存在する「ヒーロー・キッズ」１体を生け贄に捧げる。相手モンスターの攻撃を無効にし、自分のデッキから「Ｅ・ＨＥＲＯ」と名のついたモンスター１体を手札に加える。
   ko: |-
     자신 필드 위에 존재하는 "히어로 키즈" 1장을 제물로 바친다. 상대 몬스터의 공격을 무효로 하고, 자신의 덱에서 "엘리멘틀 히어로"라는 이름이 붙은 몬스터 1장을 패에 넣는다.
   zh-TW: |-
