--- a/data/cards/15294090.yaml
+++ b/data/cards/15294090.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando um monstro "HERÓI do Destino" que você controla for destruído e enviado ao Cemitério por um efeito de card do oponente: Invoque por Invocação-Especial no seu lado do campo todos os monstros "HERÓI do Destino" que foram destruídos e enviados para qualquer Cemitério neste turno.
   ja: |-
-    自分フィールド上の「D-HERO」と名のついたモンスターが相手のカードの効果によって破壊され墓地へ送られた時に発動する事ができる。このターンに破壊され墓地へ送られた「D-HERO」と名のついたモンスターを、全て自分フィールド上に特殊召喚する。
+    自分フィールド上の「Ｄ－ＨＥＲＯ」と名のついたモンスターが相手のカードの効果によって破壊され墓地へ送られた時に発動する事ができる。このターンに破壊され墓地へ送られた「Ｄ－ＨＥＲＯ」と名のついたモンスターを、全て自分フィールド上に特殊召喚する。
   ko: |-
     자신 필드 위의 "데스티니 히어로"라는 이름이 붙은 몬스터가 상대 카드의 효과에 의해서 파괴되어 묘지로 보내졌을 때, 발동할 수 있다. 이 턴에 파괴되어 묘지로 보내진 "데스티니 히어로"라는 이름이 붙은 몬스터를, 전부 자신 필드 위에 특수 소환한다.
   zh-TW: |-
