--- a/data/cards/22479888.yaml
+++ b/data/cards/22479888.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando "Clayman, o HERÓI do Elemento" que você controla for alvo de um ataque (mesmo que esteja com a face para baixo, revele-o ao oponente nesse caso): Destrua o monstro atacante e esse "Clayman, o HERÓI do Elemento" e, depois, cause 800 de dano ao oponente.
   ja: |-
-    自分フィールド上の「E・HERO クレイマン」が攻撃対象に選択された時に発動する事ができる（選択されたカードがセットされている場合、そのカードをめくって確認する）。攻撃モンスターと選択された「E・HERO クレイマン」を破壊し、相手ライフに８００ポイントダメージを与える。
+    自分フィールド上の「Ｅ・ＨＥＲＯ クレイマン」が攻撃対象に選択された時に発動する事ができる（選択されたカードがセットされている場合、そのカードをめくって確認する）。攻撃モンスターと選択された「Ｅ・ＨＥＲＯ クレイマン」を破壊し、相手ライフに８００ポイントダメージを与える。
   ko: |-
     자신 필드 위의 "엘리멘틀 히어로 클레이맨"이 공격 대상으로 선택되었을 때, 발동할 수 있다(선택된 카드가 세트되어 있을 경우, 그 카드를 넘겨서 확인한다). 공격 몬스터와 선택된 "엘리멘틀 히어로 클레이맨"을 파괴하고, 상대 라이프에 800 포인트 데미지를 준다.
   zh-TW: |-
