--- a/data/cards/29612557.yaml
+++ b/data/cards/29612557.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Equipe apenas em "Coração Selvagem, o HERÓI do Elemento". Ele ganha 500 de ATK. Quando o monstro equipado for destruído por um efeito de card e enviado ao Cemitério: Destrua todos os Cards de Magia e Armadilha no campo. Cause 100 de dano ao oponente para cada Card de Magia/Armadilha destruído por este efeito.
   ja: |-
-    「E・HERO ワイルドマン」にのみ装備可能。装備モンスターの攻撃力は５００ポイントアップする。装備モンスターが他のカードの効果によって破壊され墓地へ送られた時、フィールド上の魔法・罠カードを全て破壊する。破壊した魔法・罠カードの枚数×１００ポイントダメージを相手ライフに与える。
+    「Ｅ・ＨＥＲＯ ワイルドマン」にのみ装備可能。装備モンスターの攻撃力は５００ポイントアップする。装備モンスターが他のカードの効果によって破壊され墓地へ送られた時、フィールド上の魔法・罠カードを全て破壊する。破壊した魔法・罠カードの枚数×１００ポイントダメージを相手ライフに与える。
   ko: |-
     "엘리멘틀 히어로 와일드맨"에만 장착 가능. 장착 몬스터의 공격력은 500 포인트 올린다. 장착 몬스터가 다른 카드의 효과에 의해서 파괴되어 묘지로 보내졌을 때, 필드 위의 마법/함정 카드를 전부 파괴한다. 파괴한 마법/함정 카드의 매수 × 100 포인트 데미지를 상대 라이프에 준다.
   zh-TW: |-
