--- a/data/cards/78387742.yaml
+++ b/data/cards/78387742.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Invoque por Invocação-Especial 1 monstro "HERÓI do Elemento" da sua mão, mas ele não pode atacar e, além disso, devolva-o para a mão durante a Fase Final.
   ja: |-
-    手札から「E・HERO」と名のついたモンスター１体を特殊召喚する。この効果で特殊召喚したモンスターは攻撃できず、このターンのエンドフェイズ時に持ち主の手札に戻る。
+    手札から「Ｅ・ＨＥＲＯ」と名のついたモンスター１体を特殊召喚する。この効果で特殊召喚したモンスターは攻撃できず、このターンのエンドフェイズ時に持ち主の手札に戻る。
   ko: |-
     패에서 "엘리멘틀 히어로"라는 이름이 붙은 몬스터 1장을 특수 소환한다. 이 효과로 특수 소환한 몬스터는 공격할 수 없으며, 이 턴의 엔드 페이즈시에 주인의 패로 되돌아간다.
   zh-TW: |-
